<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!--    <HorizontalScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content" >-->
    <!--        -->
    <!--    </HorizontalScrollView>-->


    <ImageView
        android:id="@+id/foodhuntImageView"
        android:layout_width="wrap_content"
        android:layout_height="215dp"
        android:contentDescription="@string/user_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        tools:src="@drawable/user_image" />


    <ImageView
        android:id="@+id/categories_meat"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:contentDescription="@string/user_image"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="@+id/text_categories"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/meat" />

    <TextView
        android:id="@+id/categoriesMeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="5dp"
        android:text="@string/categoriesMeat"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.576" />

    <ImageView
        android:id="@+id/categories_healthy"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:contentDescription="@string/user_image"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="@+id/text_categories"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.498"
        tools:src="@drawable/healthy" />

    <TextView
        android:id="@+id/categoriesHealthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="5dp"
        android:text="@string/CategoriesHealthy"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.575" />

    <ImageView
        android:id="@+id/categories_snacks"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:contentDescription="@string/user_image"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_categories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501"
        tools:src="@drawable/snacks" />

    <TextView
        android:id="@+id/categoriesSnacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="5dp"
        android:text="Snacks"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="100dp"
        android:text="@string/text_hello"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.331" />

    <TextView
        android:id="@+id/text_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:text="@string/text_categories"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.393" />

    <TextView
        android:id="@+id/text_categories2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="20dp"
        android:text="@string/text_hello2"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.627" />

    <ImageView
        android:id="@+id/traditional_sumatera"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:contentDescription="@string/user_image"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="@+id/text_categories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        tools:src="@drawable/sumatera" />

    <TextView
        android:id="@+id/textSumatera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="5dp"
        android:text="@string/sumatera"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.772" />

    <ImageView
        android:id="@+id/traditional_jawa"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:contentDescription="@string/user_image"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/text_categories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        tools:src="@drawable/jawa" />

    <TextView
        android:id="@+id/textJawa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="5dp"
        android:text="@string/jawa"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.772" />

    <ImageView
        android:id="@+id/traditional_kalimantan"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:contentDescription="@string/user_image"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="@+id/text_categories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        tools:src="@drawable/kalimantan" />

    <TextView
        android:id="@+id/textKalimantan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="5dp"
        android:text="@string/kalimantan"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.772" />

    <ImageView
        android:id="@+id/traditional_bali"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:contentDescription="@string/user_image"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="@+id/text_categories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89"
        tools:src="@drawable/bali" />

    <TextView
        android:id="@+id/textBali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="5dp"
        android:text="@string/bali"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.899" />

    <ImageView
        android:id="@+id/traditional_sulawesi"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:contentDescription="@string/user_image"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/text_categories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89"
        tools:src="@drawable/sulawesi" />

    <TextView
        android:id="@+id/textSulawesi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="5dp"
        android:text="@string/sulawesi"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.899" />

    <ImageView
        android:id="@+id/traditional_papua"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:contentDescription="@string/user_image"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="@+id/text_categories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89"
        tools:src="@drawable/papua" />

    <TextView
        android:id="@+id/textPapua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingRight="5dp"
        android:text="@string/papua"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodhuntImageView"
        app:layout_constraintVertical_bias="0.899" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FABCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/floatingactionbutton"
        android:src="@drawable/ic_camera"
        app:backgroundTint="@color/teal_700"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>